Update FB, Google, sendgrid configuration. Add staging env.

--- a/config/database.yml
+++ b/config/database.yml
@@ -83,3 +83,9 @@ production:
   database: SnackOverflow_production
   username: SnackOverflow
   password: <%= ENV['SNACKOVERFLOW_DATABASE_PASSWORD'] %>
+
+staging:
+  <<: *default
+  database: SnackOverflow_staging
+  username: SnackOverflow
+  password: <%= ENV['SNACKOVERFLOW_DATABASE_PASSWORD'] %>
